proof of concept of using api to get character data
