# swagger/rebuildeq.yml
@@ -81,7 +81,9 @@ paths:
         200:
           description: '200 / OK'
           schema:
-            $ref: '#/definitions/Changelogs'
+            type: array
+            items: 
+              $ref: '#/definitions/Changelog'
         default:
           description: Unandled Error
   /character/{id}:
@@ -97,7 +99,7 @@ paths:
           name: id
           required: true
           description: ID of Character
-          type: string
+          type: string          
       responses:
         200:
           description: '200 / OK'
@@ -117,7 +119,9 @@ paths:
         200:
           description: '200 / OK'
           schema:
-            $ref: '#/definitions/Characters'
+            type: array
+            items:
+              $ref: '#/definitions/Character'
         default:
           description: Unhandled Error
   /inventory/{id}:
@@ -228,10 +232,6 @@ definitions:
         type: string
         description: Date the change applied
         example: '2017-01-01 01:02:03'  
-  Changelogs:
-    type: array
-    items: 
-      $ref: '#/definitions/Changelog'
   Character:
     type: object
     properties:
@@ -244,10 +244,6 @@ definitions:
       zoneid:
         type: integer
         example: 123
-  Characters:
-    type: array
-    items:
-      $ref: '#/definitions/Character'
   Item:
     type: object
     properties:
